src/objects/Brand_Centre_New__c.object
<CustomObject>
    <description>NEW APPLICATION Brand Centre Management</description>
    <fields>
        <fullName>Background_Colour__c</fullName>
        <description>Background Colour for Brand Centre</description>
        <inlineHelpText>Choose the background colour for the Brand Centre using the HTML colour picker.</inlineHelpText>
        <label>Background Colour</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Image__c</fullName>
        <description>Background Image for Brand Centre.</description>
        <inlineHelpText>Add an image which will be used as the background for your Brand Centre.  You can copy and paste and image or use the add file button if required.  Maximum size 1 MB. Only png, gif or jpeg.</inlineHelpText>
        <label>Background Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Brand_Centre_Description__c</fullName>
        <description>Description of the Brand Centre</description>
        <inlineHelpText>Enter a one sentence description for the Brand Centre.</inlineHelpText>
        <label>Brand Centre Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand_Name_unique__c</fullName>
        <label>Brand Name unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSS_All_Stories_Template__c</fullName>
        <description>CSS used on the All stories Template - please do not add .css</description>
        <inlineHelpText>CSS used on the All stories Template - please do not add .css</inlineHelpText>
        <label>CSS All Stories Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Article_Template__c</fullName>
        <description>CSS used on the Article template - please do not add .css</description>
        <inlineHelpText>CSS used on the Article template - please do not add .css</inlineHelpText>
        <label>CSS Article Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_name__c</fullName>
        <description>CSS used on the Brand Centre landing page - please do not add .css</description>
        <inlineHelpText>CSS used in the Brand Centre landing page - please do not add .css</inlineHelpText>
        <label>CSS Landing page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category of Brand Centre.</description>
        <inlineHelpText>Choose a Category which defines the Brand Centre.  The Category chosen will restrict the Sub Category which can be chosen.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homecare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Id__c</fullName>
        <description>15 Digit Salesforce ID of Chatter Group associated to the Brand Centre.</description>
        <inlineHelpText>Populate with the Salesforce ID of the Chatter Group which will display on your Brand Centre.  It is a 15 digit ID.  Go to Chatter Tab -&gt; Groups -&gt; Click your group.  Take the last 15 digits : example - 0F9L00000004N9Q.</inlineHelpText>
        <label>Chatter Group Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <description>Footer for Brand Centre.</description>
        <inlineHelpText>The footer can be defined as an image, or text, or hyper links etc. Images are limited to a maximum size 1 MB. Only png, gif or jpeg.</inlineHelpText>
        <label>Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Go_to_Brand_Centre__c</fullName>
        <description>Defines a Hyperlink which is used to go to the Brand Centre page which end users see.</description>
        <formula>if ( text(Status__c )= &apos;Published&apos;, HYPERLINK(&quot;/apex/BC_Landing_page?id=&quot;+ Id ,IMAGE(&apos;/resource/bcicologo_&apos; + Name , &quot;Site&quot;,50,50) , &quot;_blank&quot;), &apos;Brand Centre not available.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defines a Hyperlink which is used to go to the Brand Centre page which end users see. Dynamically created by the system.</inlineHelpText>
        <label>Go to Brand Centre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <description>Brand Logo for Brand Centre</description>
        <inlineHelpText>Add an image which will be the Logo for the Brand Centre.
You can copy and paste an image or use the upload button.
Maximum size 1 MB. Only png, gif or jpeg.</inlineHelpText>
        <label>Logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Brand</label>
        <referenceTo>Brand_Centre_New__c</referenceTo>
        <relationshipName>Brand_Centres_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Primary Contact for the Brand Centre.  This is a lookup to the user in Sale Force.</description>
        <inlineHelpText>Choose who will be the primary contact for the Brand Centre.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Brands_Centre</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Static_Resource_Name__c</fullName>
        <description>the name of the Static resource where will stored the css files</description>
        <inlineHelpText>the name of the Static resource where will stored the css files</inlineHelpText>
        <label>Static Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Brand Centre.
Draft or Published.</description>
        <inlineHelpText>Status of the Brand Centre.
Draft or Published.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>Sub Category of Brand Centre</description>
        <inlineHelpText>Choose a Sub Category in which the Brand Centre sits.</inlineHelpText>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dressings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deo, Hair, Skin Care &amp; Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ice Cream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lipton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savoury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Care &amp; Cleansing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Brand Centre</label>
    <listViews>
        <fullName>All_Brand_Centres</fullName>
        <columns>NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Go_to_Brand_Centre__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Brand Centres</label>
    </listViews>
    <listViews>
        <fullName>All_Brands</fullName>
        <columns>NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Go_to_Brand_Centre__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Brands</label>
        <sharedTo>
            <group>Brand_Centre_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Foods</fullName>
        <columns>NAME</columns>
        <columns>Go_to_Brand_Centre__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Brand_Centre_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Foods</value>
        </filters>
        <label>Foods</label>
    </listViews>
    <listViews>
        <fullName>Home_Care</fullName>
        <columns>NAME</columns>
        <columns>Go_to_Brand_Centre__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Brand_Centre_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>HomeCare</value>
        </filters>
        <label>Home Care</label>
    </listViews>
    <listViews>
        <fullName>Personal_Care</fullName>
        <columns>NAME</columns>
        <columns>Go_to_Brand_Centre__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Brand_Centre_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Personal Care</value>
        </filters>
        <label>Personal Care</label>
    </listViews>
    <listViews>
        <fullName>Refreshments</fullName>
        <columns>NAME</columns>
        <columns>Go_to_Brand_Centre__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Brand_Centre_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Refreshment</value>
        </filters>
        <label>Refreshments</label>
    </listViews>
    <nameField>
        <label>Brand Centre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Centres List</pluralLabel>
    <recordTypes>
        <fullName>Brand_Centre_Management</fullName>
        <active>true</active>
        <label>Brand Centre Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Brand_Centre_Read_only</fullName>
        <active>true</active>
        <description>Brand Centre Read Only</description>
        <label>Brand Centre Read only</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BC_Chatter_Group_Exists</fullName>
        <active>true</active>
        <description>Checks to see whether the Chatter Group Id which the user has input is a valid Chatter Group with 15 Characters.</description>
        <errorConditionFormula>OR
(LEN (Chatter_Group_Id__c) &lt; 15)</errorConditionFormula>
        <errorDisplayField>Chatter_Group_Id__c</errorDisplayField>
        <errorMessage>The Chatter group you have entered does not have 15 characters.
Please try again.</errorMessage>
    </validationRules>
</CustomObject>